cleaned up script

--- a/MSSQL/New Data Warehouse Setup - MSSQL.ipynb
+++ b/MSSQL/New Data Warehouse Setup - MSSQL.ipynb
@@ -34,11 +34,8 @@
                 "\t\t[system_type] [nvarchar](32) NULL,\r\n",
                 "\t\t[external_schema] [nvarchar](16) NULL,\r\n",
                 "\t\t[is_production] [bit] NOT NULL,\r\n",
-                "\t\tCONSTRAINT [PK_SourceSystem] PRIMARY KEY CLUSTERED (\r\n",
-                "\t\t\t[source_system_id] ASC\r\n",
-                "\t\t) WITH (\r\n",
-                "\t\t\tPAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON) ON [PRIMARY]\r\n",
-                "\t\t) ON [PRIMARY];\r\n",
+                "\t\tCONSTRAINT [PK_SourceSystem] PRIMARY KEY CLUSTERED ( [source_system_id] ASC )\r\n",
+                "\t);\r\n",
                 "END\r\n",
                 "\r\n",
                 "-- Set up temp table\r\n",
