cleaned up script

--- a/MSSQL/New Data Warehouse Setup - MSSQL.ipynb
+++ b/MSSQL/New Data Warehouse Setup - MSSQL.ipynb
@@ -57,8 +57,8 @@
                 ")\r\n",
                 "VALUES\r\n",
                 "\t(0, 'Unknown', NULL, NULL, NULL, 0),\r\n",
-                "\t(1, 'Astea', '5.5', 'ERP', 'astea5', 0),\r\n",
-                "\t(2, 'Astea', '14', 'ERP', 'astea14', 1),\r\n",
+                "\t(1, 'ERP Name', '1', 'ERP', 'erp', 1),\r\n",
+                "\t(2, 'System 1', '10', null, 'sys1', 0),\r\n",
                 "\t(3, 'Salesforce', NULL, 'CRM', 'sf', 1);\r\n",
                 "\r\n",
                 "-- Load Data\r\n",
