Update Error Logging - MSSQL.ipynb
fixed a few small issues

--- a/MSSQL/Error Logging - MSSQL.ipynb
+++ b/MSSQL/Error Logging - MSSQL.ipynb
@@ -82,7 +82,7 @@
         {
             "cell_type": "code",
             "source": [
-                "CREATE OR ALTER PROCEDURE [dbo].[usp_ETL_Preprocess]\r\n",
+                "CREATE OR ALTER PROCEDURE [dbo].[ETL_Preprocess]\r\n",
                 "AS\r\n",
                 "BEGIN\r\n",
                 "\tSET NOCOUNT ON;\r\n",
@@ -131,10 +131,10 @@
                 "\r\n",
                 "\tIF @hasBatchId = 1\r\n",
                 "\tBEGIN\t\r\n",
-                "\t\tSET @BATCH_ID = (SELECT TOP 1 batchId FROM [BCC_dwh].[dbo].[etlBatch] ORDER BY batchStart DESC);\t\r\n",
+                "\t\tSET @BATCH_ID = (SELECT TOP 1 batchId FROM [dbo].[etlBatch] ORDER BY batchStart DESC);\t\r\n",
                 "\tEND \r\n",
                 "\r\n",
-                "\tINSERT INTO [BCC_dwh].[dbo].[EtlLog] (batchId, errorLevel, custom_message, message, logCreated)\r\n",
+                "\tINSERT INTO [dbo].[EtlLog] (batchId, errorLevel, custom_message, message, logCreated)\r\n",
                 "\tSELECT  @BATCH_ID AS [batchId']\r\n",
                 "\t\t, ERROR_SEVERITY() AS [errorLevel]\r\n",
                 "\t\t, @customMessage AS [custom_message]\r\n",
