fixed spacing issue

--- a/MSSQL/Error Logging - MSSQL.ipynb
+++ b/MSSQL/Error Logging - MSSQL.ipynb
@@ -25,7 +25,7 @@
                 "BEGIN\n",
                 "    CREATE TABLE [dbo].[EtlBatch] (\n",
                 "        [batch_id] [uniqueidentifier] NOT NULL,\n",
-                "\t\t[batch_start_date] [date] NOT NULL,\n",
+                "        [batch_start_date] [date] NOT NULL,\n",
                 "        [batch_start_time] [time] NOT NULL\n",
                 "    );\n",
                 "END\n",
@@ -37,11 +37,11 @@
                 "        [log_id] [int] IDENTITY(1,1) NOT NULL,\n",
                 "        [batch_id] [uniqueidentifier] NULL,\n",
                 "        [error_level] [int] NULL,\n",
-                "\t\t[script_name] [varchar](256) NULL,\n",
+                "        [script_name] [varchar](256) NULL,\n",
                 "        [custom_message] [varchar](1000) NULL,\n",
                 "        [message] [varchar](max) NULL,\n",
                 "        [log_created_date] [date] NOT NULL,\n",
-                "\t\t[log_created_time] [time] NOT NULL\n",
+                "        [log_created_time] [time] NOT NULL\n",
                 "    );\n",
                 "END\n",
                 "\n",
@@ -52,11 +52,11 @@
                 "        [log_id] [int] NOT NULL,\n",
                 "        [batch_id] [uniqueidentifier] NULL,\n",
                 "        [error_level] [int] NULL,\n",
-                "\t\t[script_name] [varchar](256) NULL,\n",
+                "        [script_name] [varchar](256) NULL,\n",
                 "        [custom_message] [varchar](1000) NULL,\n",
                 "        [message] [varchar](max) NULL,\n",
                 "        [log_created_date] [date] NOT NULL,\n",
-                "\t\t[log_created_time] [time] NOT NULL\n",
+                "        [log_created_time] [time] NOT NULL\n",
                 "    );\n",
                 "END\n",
                 "GO"
