Update Date Table - MSSQL.ipynb
added index to make lookup faster

--- a/MSSQL/Date Table - MSSQL.ipynb
+++ b/MSSQL/Date Table - MSSQL.ipynb
@@ -49,7 +49,8 @@
                 "\t\t\t[description] [nvarchar](32) NULL,\r\n",
                 "\t\t\t[created_date] [datetime] NOT NULL,\r\n",
                 "\t\t\t[modified_date] [datetime] NULL,\r\n",
-                "\t\t\tCONSTRAINT [PK_master_holiday] PRIMARY KEY CLUSTERED ([holiday_key] ASC)\r\n",
+                "\t\t\tCONSTRAINT [PK_master_holiday] PRIMARY KEY CLUSTERED ([holiday_key] ASC),\r\n",
+                "\t\t\tINDEX [IX_master_holiday] NONCLUSTERED ([observed_date])\r\n",
                 "\t\t);\r\n",
                 "\tEND\r\n",
                 "\r\n",
